<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    
    <TextView
        android:id="@+id/solution_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/_41771594"
        android:textColor="@color/black"
        android:textSize="32dp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@id/result_tv"/>

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/wildermuth"
        android:textColor="@color/black"
        android:textSize="64dp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@id/button_layout"/>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--This is the clear button, it allows the user to delete
            the last input item without clearing the entire text field.-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_c"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/C"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="#337DFF"
                app:cornerRadius="36dp"/>

            <!--This is the open parenthesis button "(", it inputs an open parenthesis
            when clicked by the user.-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_open_parenthesis"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/openParenthesis"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="#4C4C4C"
                app:cornerRadius="36dp"/>

            <!--This is the close parenthesis button ")", it inputs a close parenthesis
            when clicked by the user.-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_close_parenthesis"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/closeParenthesis"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="#4C4C4C"
                app:cornerRadius="36dp"/>

            <!--This is the division button "/", it inputs the division symbol and divides
            the input when clicked by the user.-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_division"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/division"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="#4000FF"
                app:cornerRadius="36dp"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--This is the 7 button, it inputs a 7 into the text field.-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_7"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="#4C4C4C"
                app:cornerRadius="36dp"/>

            <!--This is the 8 button, it inputs a 8 into the text field.-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_8"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="#4C4C4C"
                app:cornerRadius="36dp"/>

            <!--This is the 9 button, it inputs a 9 into the text field.-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="#4C4C4C"
                app:cornerRadius="36dp"/>

            <!--This is the multiply button "*", it inputs the multiplication symbol and
            multiplies the input when clicked by the user.-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multiply"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="#4001FF"
                app:cornerRadius="36dp"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--This is the 4 button, it inputs a 4 into the text field.-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_4"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="#4C4C4C"
                app:cornerRadius="36dp"/>

            <!--This is the 5 button, it inputs a 5 into the text field.-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_5"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="#4C4C4C"
                app:cornerRadius="36dp"/>

            <!--This is the 6 button, it inputs a 6 into the text field.-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="#4C4C4C"
                app:cornerRadius="36dp"/>

            <!--This is the addition button "+", it inputs the addition symbol and
            adds the input when clicked by the user.-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="#4001FF"
                app:cornerRadius="36dp"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--This is the 1 button, it inputs a 1 into the text field.-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_1"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="#4C4C4C"
                app:cornerRadius="36dp"/>

            <!--This is the 2 button, it inputs a 2 into the text field.-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_2"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="#4C4C4C"
                app:cornerRadius="36dp"/>

            <!--This is the 3 button, it inputs a 3 into the text field.-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="#4C4C4C"
                app:cornerRadius="36dp"/>

            <!--This is the subtraction button "-", it inputs the subtraction symbol and
            subtracts the input when clicked by the user.-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="#4001FF"
                app:cornerRadius="36dp"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--This is the clear button, it allows the user to delete
            the last input item without clearing the entire text field.-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_ac"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/allClear"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:backgroundTint="#FF3377"
                app:cornerRadius="36dp"/>

            <!--This is the open parenthesis button "(", it inputs an open parenthesis
            when clicked by the user.-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_0"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="#FF8033"
                app:cornerRadius="36dp"/>

            <!--This is the close parenthesis button ")", it inputs a close parenthesis
            when clicked by the user.-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_dot"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="#4C4C4C"
                app:cornerRadius="36dp"/>

            <!--This is the division button "/", it inputs division symbol and divides
            the input when clicked by the user.-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equals"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_margin="12dp"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:backgroundTint="#4001FF"
                app:cornerRadius="36dp"/>

        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>